be/src/exec/analytic-eval-node.cc
@@ -438,37 +438,40 @@ inline void AnalyticEvalNode::InitNextPartition(int64_t stream_idx) {
   int64_t prev_partition_stream_idx = curr_partition_idx_;
   curr_partition_idx_ = stream_idx;
 
-  // If the window has an end bound preceding the current row, we will have output
-  // tuples for rows beyond the partition so they should be removed. If there was only
-  // one result tuple left in the partition it will remain in result_tuples_ because it
-  // is the empty result tuple (i.e. called Init() and never Update()) that was added
-  // when initializing the previous partition so that the first rows have the default
-  // values (where there are no preceding rows in the window).
-  bool removed_results_past_partition = false;
-  while (!result_tuples_.empty() && last_result_idx_ >= curr_partition_idx_) {
-    removed_results_past_partition = true;
-    DCHECK(window_.__isset.window_end &&
+  // If the window has an end bound preceding the current row, we will have output tuples
+  // for rows beyond the previous partition, so they should be removed.  Because
+  // result_tuples_ is a sparse structure, the last result tuple of the previous
+  // partition may have been added to result_tuples_ with a stream index equal to or
+  // beyond curr_partition_idx_. So the last entry in result_tuples_ with a stream index
+  // >= curr_partition_idx_ is the last result tuple of the previous partition.  Adding
+  // the last result tuple to result_tuples_ with a stream index curr_partition_idx_ - 1
+  // ensures that all rows in the previous partition have corresponding analytic results.
+  Tuple* prev_partition_last_result_tuple = NULL;
+  while (!result_tuples_.empty() && result_tuples_.back().first >= curr_partition_idx_) {
+    DCHECK(fn_scope_ == ROWS && window_.__isset.window_end &&
         window_.window_end.type == TAnalyticWindowBoundaryType::PRECEDING);
     VLOG_ROW << id() << " Removing result past partition idx: "
              << result_tuples_.back().first;
-    Tuple* prev_result_tuple = result_tuples_.back().second;
+    prev_partition_last_result_tuple = result_tuples_.back().second;
     result_tuples_.pop_back();
-    if (result_tuples_.empty() ||
-        result_tuples_.back().first < prev_partition_stream_idx) {
-      // prev_result_tuple was the last result tuple in the partition, add it back with
-      // the index of the last row in the partition so that all output rows in this
-      // partition get the default result tuple.
-      result_tuples_.push_back(
-          pair<int64_t, Tuple*>(curr_partition_idx_ - 1, prev_result_tuple));
-    }
-    last_result_idx_ = result_tuples_.back().first;
   }
-  if (removed_results_past_partition) {
+  if (prev_partition_last_result_tuple != NULL) {
+    if (result_tuples_.empty() ||
+        result_tuples_.back().first < curr_partition_idx_ - 1) {
+      // prev_partition_last_result_tuple was the last result tuple in the partition, add
+      // it back with the index of the last row in the partition so that all output rows
+      // in this partition get the correct value.
+      result_tuples_.push_back(pair<int64_t, Tuple*>(curr_partition_idx_ - 1,
+          prev_partition_last_result_tuple));
+    }
+    DCHECK(!result_tuples_.empty());
+    last_result_idx_ = result_tuples_.back().first;
     VLOG_ROW << id() << " After removing results past partition: "
              << DebugStateString(true);
     DCHECK_EQ(last_result_idx_, curr_partition_idx_ - 1);
     DCHECK_LE(input_stream_->rows_returned(), last_result_idx_);
   }
+  DCHECK(result_tuples_.empty() || (last_result_idx_ == result_tuples_.back().first));
 
   if (fn_scope_ == ROWS && stream_idx > 0 && (!window_.__isset.window_end ||
         window_.window_end.type == TAnalyticWindowBoundaryType::FOLLOWING)) {
